src/deploy-nginx-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-1
  namespace: user1
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.15.4
