src/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:   
  containers:
  - name:  pause
    image: k8s.gcr.io/pause 
    securityContext:
      privileged: false
      runAsUser: 1000
