src/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  labels:
    app: my-app
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 8080
