src/network-policy-1.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: user1
  name: np-1
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
