src/network-policy-2.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: user2
  name: np-2
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
